# amplifier-playground

./: .gitignore  DISCOVERIES.md  Makefile  README.md  pyproject.toml
.amplifier/agents/: code-reviewer.md  test-writer.md
.amplifier/context/: api-guidelines.md  project-rules.md
.amplifier/profiles/: example-basic.md  example-extends.md  example-full.md  example-with-agents.md  example-with-context.md  test-cli.md
.github/ISSUE_TEMPLATE/: feedback.md
examples/: mount-plan-hybrid.json  mount-plan-local.json  mount-plan-remote.json  mount-plan-with-agents.json  mount-plan.json
examples/modules/amplifier-module-tool-echo/: README.md  pyproject.toml
examples/modules/amplifier-module-tool-echo/amplifier_module_tool_echo/: __init__.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: DependencyGraphViewer.tsx  HelpModal.css  HelpModal.tsx  MountPlanBuilder.css  MountPlanBuilder.tsx  MountPlanInputModal.css  MountPlanInputModal.tsx  MountPlanViewer.css  MountPlanViewer.tsx  ProfileViewer.tsx  SessionInfoModal.css  SessionInfoModal.tsx  SessionPane.tsx  SettingsModal.css  SettingsModal.tsx  ThemeToggle.css  ThemeToggle.tsx
modules/amplifier-module-resolution/: .gitignore  README.md  pyproject.toml
modules/amplifier-module-resolution/docs/: SPECIFICATION.md  USER_GUIDE.md
modules/amplifier-module-resolution/src/amplifier_module_resolution/: __init__.py  exceptions.py  protocols.py  resolvers.py  sources.py
modules/amplifier-module-resolution/tests/: test_module_resolution_integration.py  test_resolvers.py  test_sources.py
scripts/: dev.sh
src/amplifier_playground/: __init__.py
src/amplifier_playground/cli/: __init__.py  main.py
src/amplifier_playground/cli/commands/: __init__.py
src/amplifier_playground/core/: __init__.py  collection_manager.py  config_manager.py  credentials.py  module_registry.py  protocols.py  session_runner.py  ux_systems.py
src/amplifier_playground/data/collections/developer-expertise/: README.md  pyproject.toml
src/amplifier_playground/data/collections/developer-expertise/agents/: bug-hunter.md  integration-specialist.md  modular-builder.md  post-task-cleanup.md  researcher.md  security-guardian.md  test-coverage.md  zen-architect.md
src/amplifier_playground/data/collections/developer-expertise/profiles/: dev.md  full.md
src/amplifier_playground/data/collections/foundation/: README.md  pyproject.toml
src/amplifier_playground/data/collections/foundation/agents/: explorer.md
src/amplifier_playground/data/collections/foundation/context/shared/: common-agent-base.md  common-profile-base.md
src/amplifier_playground/data/collections/foundation/profiles/: base.md  foundation.md  general.md  test.md
src/amplifier_playground/data/collections/playground/: README.md  pyproject.toml
src/amplifier_playground/data/collections/playground/profiles/: example-basic.md  example-extends.md  example-full.md  example-local-module.md  example-with-agents.md  example-with-context.md
src/amplifier_playground/profiles/: __init__.py  compiler.py  schema.py  utils.py
src/amplifier_playground/web/: __init__.py  app.py  models.py
src/amplifier_playground/web/routes/: __init__.py  collections.py  configs.py  modules.py  profiles.py  sessions.py  settings.py
src/amplifier_playground/web/static/: index.html
src/amplifier_playground/web/static/assets/: index-B3W0Nvl9.css  index-B7IF4duP.js  index-BCQfFl4D.js  index-BKhdlxQs.css  index-BLKDuNTf.js  index-BUFRSChZ.js  index-BwJ0Nos8.js  index-CMnjM_FV.js  index-CVUvSMnL.css  index-CbxnDw_r.css  index-Cq-ET2Ul.js  index-D0J4sOJj.js  index-Do41mbkz.css  index-Dp7TycoF.css  index-DpLwSV_4.css  index-OCTTIT13.css  index-iAV9nj3f.js  index-vDmj-dUn.css
src/amplifier_workbench/: __init__.py
src/amplifier_workbench/cli/: __init__.py  main.py
src/amplifier_workbench/cli/commands/: __init__.py
src/amplifier_workbench/core/: __init__.py  collection_manager.py  config_manager.py  mention_loader.py  mentions.py  module_registry.py  protocols.py  session_runner.py  ux_systems.py
src/amplifier_workbench/profiles/: __init__.py  exceptions.py  loader.py
src/amplifier_workbench/web/: __init__.py  app.py  models.py
src/amplifier_workbench/web/routes/: __init__.py  collections.py  configs.py  modules.py  profiles.py  sessions.py
