[project]
name = "amplifier-workbench"
version = "0.1.0"
description = "Interactive configuration and testing tool for Amplifier runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core",
    "amplifier-module-resolution",
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sse-starlette>=1.6.0",
    "pydantic>=2.0",
    "anthropic>=0.75.0",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-module-resolution = { path = "./modules/amplifier-module-resolution", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
awb = "amplifier_workbench.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_workbench"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
